--- a/508.html
+++ b/508.html
@@ -1,14 +1,28 @@
 ---
 layout: page-template
-title: VPAT 508 Compliance
+title: WCAG-508 Compliance
 category: Web Accessibility
-caption: Understading 508 & WCAG
-description: What is Secion 508 & WCAG and what does it all mean
+caption: Understanding WCAG & 508
+description: Kaffeinated Kodemonkey offers WCAG certification and more. Come to our website to schedule your free consultation for VPAT 508 compliance.
 image: Section508.png
-alt: Section 508 Requirments
+alt: WCAG & 508 Compliance
 ---
+<h1>WCAG Compliance</h1>
 
-<h1>Section 508 Compliance</h1>
+<p><a href="https://www.w3.org/WAI/standards-guidelines/wcag/" target="_blank">Web Content Accessibility Guidelines (WCAG)</a>, developed through the World Wide Web Consortium (W3C) process in cooperation with individuals and
+organizations around the world, with a goal of providing a single shared standard for web content accessibility that meets the needs of individuals,
+organizations, and governments internationally.</p>
+
+<p>The WCAG documents explain how to make web content more accessible to people with disabilities. Web "content" generally refers to the information in a web
+page or web application, including:</p>
+
+<ul>
+  <li>Natural information such as text, images, and sounds</li>
+  <li>Code or markup that defines structure, presentation, etc.</li>
+</ul>
+<p>WCAG is becoming a globally recognized voluntary consensus standard for web content and Information and Communication Technology (ICT).</p>
+
+<h2>508 Compliance</h2>
 
 <!--<p>If your business is a federal government agency, or receives funding/assistance from the federal government then you have to abide by section Section 508
 requirements.</p>-->
@@ -26,21 +40,6 @@ W3C guidelines know as WCA.</p>
 
 <p>For more understanding of Section 508 and the Revised Standards you can visit the <a href="https://www.section508.gov/manage/laws-and-policies" target="_blank">GSA
 Government-wide IT Accessibility Program</a>.</p>
-
-<h1>WCAG Compliance</h1>
-
-<p><a href="https://www.w3.org/WAI/standards-guidelines/wcag/" target="_blank">Web Content Accessibility Guidelines (WCAG)</a>, developed through the World Wide Web Consortium (W3C) process in cooperation with individuals and
-organizations around the world, with a goal of providing a single shared standard for web content accessibility that meets the needs of individuals,
-organizations, and governments internationally.</p>
-
-<p>The WCAG documents explain how to make web content more accessible to people with disabilities. Web "content" generally refers to the information in a web
-page or web application, including:</p>
-
-<ul>
-  <li>Natural information such as text, images, and sounds</li>
-  <li>Code or markup that defines structure, presentation, etc.</li>
-</ul>
-<p>WCAG is becoming a globally recognized voluntary consensus standard for web content and Information and Communication Technology (ICT).</p>
 
 <h2>Contact Us</h2>
 
