--- a/WCAG-508-Compliance.html
+++ b/WCAG-508-Compliance.html
@@ -10,11 +10,11 @@ alt: WCAG & 508 Compliance
 <h1>WCAG Compliance</h1>
 
 <p><a href="https://www.w3.org/WAI/standards-guidelines/wcag/" target="_blank">Web Content Accessibility Guidelines (WCAG)</a>, developed through the World Wide Web Consortium (W3C) process in cooperation with individuals and
-organizations around the world, with a goal of providing a single shared standard for web content accessibility that meets the needs of individuals,
-organizations, and governments internationally.</p>
+  organizations around the world, with a goal of providing a single shared standard for web content accessibility that meets the needs of individuals,
+  organizations, and governments internationally.</p>
 
 <p>The WCAG documents explain how to make web content more accessible to people with disabilities. Web "content" generally refers to the information in a web
-page or web application, including:</p>
+  page or web application, including:</p>
 
 <ul>
   <li>Natural information such as text, images, and sounds</li>
@@ -28,20 +28,21 @@ page or web application, including:</p>
 requirements.</p>-->
 
 <p>In 1998, Congress amended the Rehabilitation Act of 1973 requiring Federal agencies to make electronic documents accessible to people with disabilities.
-Section 508 applies to all Federal agencies when it pertains to electronic and information technology. Government agencies must give disabled employees and members
-of the public access to the same or comparable information as they do others.</p>
+  Section 508 applies to all Federal agencies when it pertains to electronic and information technology. Government agencies must give disabled employees and members
+  of the public access to the same or comparable information as they do others.</p>
 
 <p>The <a href="https://www.access-board.gov/" target="_blank">U.S. Access Board</a> is responsible for developing accessibility standards that govern Federal
-procurement practices. January 2017, they issued a final rule that updated accessibility requirements for section 508 and refreshed guidelines to Section 255.</p>
+  procurement practices. January 2017, they issued a final rule that updated accessibility requirements for section 508 and refreshed guidelines to Section 255.</p>
 
 <p>The refresh reorganized Section 508 Standards and Section 255 Guidelines in response to market trends and innovations in technology. The refresh also
-harmonized these requirements with other guidelines and standards both in the U.S. and abroad, including standards issued by the European Commission, and
-W3C guidelines know as WCA.</p>
+  harmonized these requirements with other guidelines and standards both in the U.S. and abroad, including standards issued by the European Commission, and
+  W3C guidelines know as WCA.</p>
 
 <p>For more understanding of Section 508 and the Revised Standards you can visit the <a href="https://www.section508.gov/manage/laws-and-policies" target="_blank">GSA
-Government-wide IT Accessibility Program</a>.</p>
+    Government-wide IT Accessibility Program</a>.</p>
 
 <h2>Contact Us</h2>
 
-<p>WCAG Certification and Evaluations. Will your site pass the WCAG standards? Find out and start fixing them <span class="text-uppercase text-danger">TODAY</span>!</p>
+<p>Dose your site pass the WCAG standards, do you need a VPAT Evaluation? </p>
+<p>Find out <span class="text-uppercase text-danger">TODAY</span> and become WCAG Certification.</p>
 <p><a class="btn btn-md btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Talk to an Accessibility Expert TODAY!</a></p>
