--- a/WCAG-Certification.html
+++ b/WCAG-Certification.html
@@ -9,10 +9,9 @@ description: WCAG Certifications include VPAT Document and Accessibility Statmen
 ---
 
 <h1>WCAG Certification</h1>
-<p>In order for your product to become WCAG Certified it has to meet all WCAG criteria to be considered compliant.</p>
+<p>We will conduct a VPAT Evaluation and submit a How-To-Fix document notating any issues found that need to be resolved.</p>
 
-<p>Therefore we will conduct a full evaluation and submit a How-To-Fix document notating any issues found that need to be resolved for us
-to issue a WCAG Certification. In some cases, we can issue a partial certification that allows you time to resolve issues and become completely certified.</p>
+<p>In order for your product to become Certified it must meet all WCAG criteria to be considered ADA compliant.</p>
 
 <p>Kaffeinated Kodemonkey offers four (4) types of Certifications:</p>
 
@@ -23,32 +22,32 @@ to issue a WCAG Certification. In some cases, we can issue a partial certificati
   <li><strong>WCAG-Int Certification</strong>: Incorporates all three of the above standards for Full Compliance</li>
 </ul>
 
-<p>Each Certification is comprised of a Web Accessibility Statment, a VPAT document and our certification badge indicating the level of compliance and date certified. </p>
+<p>Each Certification is comprised of a Web Accessibility Statment, a VPAT document and a certification badge.</p>
 
-<h2>What is an Accessibility Evaluation?</h2>
+<h2>What is a VPAT Evaluation?</h2>
+<p>Through an automated evaluation of the code structure, our Accessibility Experts can determine if your site meets the WCAG criteria set forth on the VPAT document.</p>
 
-<p>Accessibility Evaluation is a process of examining a product to verify it meets the <strong>WCAG</strong> criteria standards up to level AA.
-This process is done through an automated evaluation via our accessibility script to programming analyzes the structure of each page.</p>
+<p>Our Accessibility Expert also analyses each page for Errors – Alerts – Features – Structural Elements – HTML5 & Aria - Constant Errors, testing the site for hands-free access, vision impairedness, low-vision, color-blind, learning disabilities,
+  deafness,low-hearing, and more through assistive technology.</p>
 
-<p>This gives our Accessibility Expert a deeper analysis of each page. By return the number of Errors – Alerts – Features – Structural Elements – HTML5 &
-Aria Constant Errors our expert can further test the site for hands-free access, vision impairedness, low-vision, color-blind, learning disabilities,
-deafness,low-hearing, and more through assistive technology.</p>
-
-<p>Once completed we will submit a How-To-Fix document outlining any issues and how to resolve them.</p>
+<p>Once completed we will issue a VPAT document based on the results. </p>
 
 <h2>What is a VPAT Document?</h2>
+<p>The Voluntary Product Accessibility Template (<span class="text-uppercase">VPAT</span>) is a document which evaluates how accessible a particular product is according to the WCAG & Section 508 Standards. It is a self-disclosing document produced
+  by the vendor which details each aspect of the WCAG & Section 508 requirements and how the product supports each criteria.</p>
 
-<p>Our expertise lies in accessibility driven development. Whether we are designing a website or Evaluating for a <strong>WCAG</strong> Certification we always
-use <span class="text-uppercase"><strong><em><a href="https://www.kaffeinatedkodemonkey.com/faq#collapseThree">POUR</a></em></strong></span> design principals by <strong>WCAG</strong> to meets accessibility requirements.</p>
+<p>VPATs are used by buyers to determine how accessible a product is and where any potential deficiencies are. They are required by some buyers before a purchase is made.</p>
 
-<p>We use the <strong>Voluntary Product Accessibility Template (VPAT)</strong>, for our <strong>WCAG</strong> Certifications that follows the accessibility standards for Section 508 (U.S.), EN 301 549 (EU), and W3C/WAI <strong>WCAG</strong>.
-Some companies are required to fill out a VPAT before they can release a new product, others may need one to Certify that they have met the Accessibility
-requirements. We use the VPAT to certify that our sites are ADA compliant.</p>
+<p>The official VPAT forms are hosted by the Information Technology Industrial Council and are available in the Microsoft Word format.</p>
+
+<p>The VPAT contains documentation on WCAG & Section 508 (2017 Refresh), Web Content Accessibility Guidelines (WCAG) 2.x Success Criteria & Conformance Requirements (Levels A, AA, AAA) as well as the European Accessibility standards EN 301.</p>
+
+<p>Kaffeinated Kodemonkey use the <strong><span class="text-uppercase">VPAT</span></strong>, for our <strong>WCAG</strong> Certifications and follows the accessibility standards for the give requirements - <strong>Section 508 (U.S.), EN 301 549 (EU),
+    and W3C/WAI WCAG</strong>.</p>
 
 <h2>What is an Accessibility Statment?</h2>
-
-<p>This is a Statment we will create for you to place on your website along with your other site policy statements. An Accessibility Statment let's
-your users understand how your site is accessible, the technology used and generally outlines your steps to compliance.</p>
+<p>This is a statement that outlines your process of becoming and staying compliant. I contains information on who to contact if you have an accessibility issue, notates if the site is not accessible with a certain platform or tool and how the
+  companies are addressing it among other information.</p>
 
 <h2>Contact Us</h2>
 
