--- a/WCAG-508-Compliance.html
+++ b/WCAG-508-Compliance.html
@@ -43,6 +43,6 @@ requirements.</p>-->
 
 <h2>Contact Us</h2>
 
-<p>Dose your site pass the WCAG standards, do you need a VPAT Evaluation? </p>
+<p>Dose your site meet the WCAG standards, do you need a VPAT Evaluation? </p>
 <p>Find out <span class="text-uppercase text-danger">TODAY</span> and become WCAG Certification.</p>
 <p><a class="btn btn-md btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Talk to an Accessibility Expert TODAY!</a></p>
