--- a/WCAG-Certification.html
+++ b/WCAG-Certification.html
@@ -9,9 +9,9 @@ description: WCAG Certifications include VPAT Document and Accessibility Statmen
 ---
 
 <h1>WCAG Certification</h1>
-<p>We will conduct a VPAT Evaluation and submit a How-To-Fix document notating any issues found that need to be resolved.</p>
+<p>We conduct VPAT Evaluation and submit a How-To-Fix document notating any issues found that need to be resolved.</p>
 
-<p>In order for your product to become Certified it must meet all WCAG criteria to be considered ADA compliant.</p>
+<p>In order for your product to be certified as ADA compliant it must meet all WCAG criteria for Level AA.</p>
 
 <p>Kaffeinated Kodemonkey offers four (4) types of Certifications:</p>
 
@@ -24,7 +24,7 @@ description: WCAG Certifications include VPAT Document and Accessibility Statmen
 
 <p>Each Certification is comprised of a Web Accessibility Statment, a VPAT document and a certification badge.</p>
 
-<h2>What is a VPAT Evaluation?</h2>
+<h2>VPAT Evaluation</h2>
 <p>Through an automated evaluation of the code structure, our Accessibility Experts can determine if your site meets the WCAG criteria set forth on the VPAT document.</p>
 
 <p>Our Accessibility Expert also analyses each page for Errors – Alerts – Features – Structural Elements – HTML5 & Aria - Constant Errors, testing the site for hands-free access, vision impairedness, low-vision, color-blind, learning disabilities,
@@ -32,7 +32,7 @@ description: WCAG Certifications include VPAT Document and Accessibility Statmen
 
 <p>Once completed we will issue a VPAT document based on the results. </p>
 
-<h2>What is a VPAT Document?</h2>
+<h2>VPAT Document</h2>
 <p>The Voluntary Product Accessibility Template (<span class="text-uppercase">VPAT</span>) is a document which evaluates how accessible a particular product is according to the WCAG & Section 508 Standards. It is a self-disclosing document produced
   by the vendor which details each aspect of the WCAG & Section 508 requirements and how the product supports each criteria.</p>
 
