--- a/Download-E-Book.html
+++ b/Download-E-Book.html
@@ -10,4 +10,4 @@ description: Thank you
 <p>Thank you for opting in for your Free Accessibility E-Book.</p>
 <p>Click the button below to Download a copy of our PDF E-Book</p>
 
-<p><a class="btn btn-large btn-info" href="https://docs.google.com/document/d/1P8KivRtTweM18ct6t4fuiL_cMwHHP4-d4NlKkhxHHyM/edit?usp=sharing" target="Download Accessibility E-Book PDF">Accessibility E-Book</a></p>
+<p><a class="btn btn-large btn-info" href="https://drive.google.com/open?id=1-pGx95zNlr-ndoXbnT-jUpHI3k27ivrn" target="Download Accessibility E-Book PDF">Accessibility E-Book</a></p>
