--- a/WA-Certification.html
+++ b/WA-Certification.html
@@ -24,7 +24,7 @@ description: WCAG Certifications include VPAT Document and Accessibility Statmen
 <p>For a product to be certified as ADA compliant it must meet all WCAG criteria for Level AA. Our Certifications are comprised of the following items and are
 good for one(1) year from the date issued:</p>
 <ul>
-  <li>A completed VPAT, that verifies your site pass all required criteria</li>
+  <li>Document of Validation vaifing your site pass all required criteria</li>
   <li>An Accessibility Statment - to place on you webasite describing your policy, goals, and accomplishments related to web accessibility</li>
   <li>Validation Badge - Indicationg the type of certification, level of compliance, and expiration date</li>
 </ul>
